--- a/.twitter_search/index.html
+++ b/.twitter_search/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="NazeCoin">
+<html ng-app="PeopleCoin">
   <head>
     <title>Twitter API with Javascript/Node/Express</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
